<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="Back"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toBottomOf="@id/backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Profile Title -->
    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_profile"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_profile_picture"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- First Name and Last Name -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nameContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <!-- First Name -->
        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/rounded_rectangle"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editLastName"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" />

        <!-- Last Name -->
        <EditText
            android:id="@+id/editLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/rounded_rectangle"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@id/editFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Email -->
    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:text=""
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp" />

    <!-- Edit Password -->
    <TextView
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/edit_password"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp" />

    <!-- Phone Number Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phoneNumberContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <!-- Phone Number -->
        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Phone number is not provided"
            android:textColor="@android:color/black"
            android:gravity= "center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editPhoneNumberButton"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" />

        <!-- Edit Phone Number Button -->
        <ImageView
            android:id="@+id/editPhoneNumberButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="Edit Phone Number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Card Information Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardInfoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <!-- Card Information Title -->
        <TextView
            android:id="@+id/cardInfoLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Card Information:"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Card Information Details -->
        <TextView
            android:id="@+id/cardInfoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="No card information available"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardInfoLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Edit Card Info Button -->
        <ImageView
            android:id="@+id/editCardInfoButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="Edit Card Info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Button Container -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardInfoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp">

        <!-- Change Card Button -->
        <Button
            android:id="@+id/changeCardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/change_card"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="12dp" />

        <!-- Log Out Button -->
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/log_out"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="12dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>